add start db log, test event log

--- a/Test/App.config
+++ b/Test/App.config
@@ -68,4 +68,7 @@
     <add key="FLogException" value="True" />
 
   </appSettings>
+  <connectionStrings>
+    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
