--- a/IDSLogs/IDSLogs.csproj
+++ b/IDSLogs/IDSLogs.csproj
@@ -46,6 +46,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DBLOG\DBLOG.csproj">
+      <Project>{5a44478b-12a2-410f-be17-4e3ad2331c5c}</Project>
+      <Name>DBLOG</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ELOG\ELOG.csproj">
       <Project>{513e1e72-406a-4309-92dd-fb8c079c9bbd}</Project>
       <Name>ELOG</Name>
