add Transfer Approaches -> MT add UZ add UZ Directory add Test transfer Approaches

--- a/Test/App.config
+++ b/Test/App.config
@@ -60,16 +60,28 @@
     <!-- В журнал Windows -->
     <add key="ELog" value="False" />
     <add key="ELogException" value="False" />
+    <add key="ELogEvent" value="False" />   
+    <add key="ELogServices" value="False" />      
+    
     <!-- В базу данных -->
     <add key="DBLog" value="False" />
     <add key="DBLogException" value="False" />
+    <add key="DBLogEvent" value="False" />  
+    <add key="DBLogServices" value="False" />      
+    
     <!-- В файл на диске -->
     <add key="FLog" value="True" />
     <add key="FLogException" value="True" />
+    <add key="FLogEvent" value="True" />
+    <add key="FLogServices" value="True" />   
 
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
+
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   
   </connectionStrings>
