--- a/EFUZ/EFUZ.csproj
+++ b/EFUZ/EFUZ.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4970E0A-9744-4732-ACB6-967900690A6D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3AC80091-5ADD-43BD-8875-0F3CE3E86A25}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>EFUZ</RootNamespace>
+    <AssemblyName>EFUZ</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,14 +31,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,31 +50,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Concrete\EFDirectory_Stations.cs" />
+    <Compile Include="Concrete\EFDirectory_States.cs" />
+    <Compile Include="Concrete\EFDirectory_InternalRailroad.cs" />
+    <Compile Include="Concrete\EFDirectory_Countrys.cs" />
+    <Compile Include="Concrete\EFDirectory_Cargo.cs" />
+    <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Entities\Directory_Cargo.cs" />
+    <Compile Include="Entities\Directory_Countrys.cs" />
+    <Compile Include="Entities\Directory_InternalRailroad.cs" />
+    <Compile Include="Entities\Directory_States.cs" />
+    <Compile Include="Entities\Directory_Stations.cs" />
+    <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestModule\Test_Logs.cs" />
-    <Compile Include="TestModule\Test_Metrans.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DBLOG\DBLOG.csproj">
-      <Project>{5a44478b-12a2-410f-be17-4e3ad2331c5c}</Project>
-      <Name>DBLOG</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ELOG\ELOG.csproj">
-      <Project>{513e1e72-406a-4309-92dd-fb8c079c9bbd}</Project>
-      <Name>ELOG</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FLOG\FLOG.csproj">
-      <Project>{32908704-611b-4c22-8349-e03369ae725f}</Project>
-      <Name>FLOG</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MT\MT.csproj">
-      <Project>{165bfdab-435f-42eb-8b6c-120f910a62e8}</Project>
-      <Name>MT</Name>
-    </ProjectReference>
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
