--- a/UZ/UZ.csproj
+++ b/UZ/UZ.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{165BFDAB-435F-42EB-8B6C-120F910A62E8}</ProjectGuid>
+    <ProjectGuid>{D7147560-B66A-41BB-BDDD-4D24403D5E97}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MT</RootNamespace>
-    <AssemblyName>MT</AssemblyName>
+    <RootNamespace>UZ</RootNamespace>
+    <AssemblyName>UZ</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,37 +42,28 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tamir.SharpSsh, Version=1.1.1.13, Culture=neutral, PublicKeyToken=4ed5f4288b4076af, processorArchitecture=MSIL">
-      <HintPath>..\packages\Tamir.SharpSsh.dll.1.1.1.14\lib\Tamir.SharpSsh.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MTTransfer.cs" />
+    <Compile Include="UZDirectory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SFTPTransfer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DBLOG\DBLOG.csproj">
-      <Project>{5a44478b-12a2-410f-be17-4e3ad2331c5c}</Project>
-      <Name>DBLOG</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EFMT\EFMT.csproj">
-      <Project>{0ef55f70-8933-4553-a6d9-407d54b61b49}</Project>
-      <Name>EFMT</Name>
+    <ProjectReference Include="..\EFUZ\EFUZ.csproj">
+      <Project>{3ac80091-5add-43bd-8875-0f3ce3e86a25}</Project>
+      <Name>EFUZ</Name>
     </ProjectReference>
     <ProjectReference Include="..\IDSLogs\IDSLogs.csproj">
       <Project>{910d6360-9e8c-4143-a4dd-84e778edb7a6}</Project>
       <Name>IDSLogs</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UZ\UZ.csproj">
-      <Project>{d7147560-b66a-41bb-bddd-4d24403d5e97}</Project>
-      <Name>UZ</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
