--- a/Test/App.config
+++ b/Test/App.config
@@ -1,88 +1,103 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Informations.log" />
-      <param name="AppendToFile" value="true" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="5MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <param name="File" value="Logs\Informations.log"/>
+      <param name="AppendToFile" value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="5MB"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n" />
+        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <levelMax value="WARN" />
+        <levelMin value="INFO"/>
+        <levelMax value="WARN"/>
       </filter>
     </appender>
     <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Errors.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Errors.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR" />
-        <levelMax value="FATAL" />
+        <levelMin value="ERROR"/>
+        <levelMax value="FATAL"/>
       </filter>
     </appender>
     <appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Debug.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Debug.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="DEBUG" />
-        <levelMax value="DEBUG" />
+        <levelMin value="DEBUG"/>
+        <levelMax value="DEBUG"/>
       </filter>
     </appender>
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="ErrorFile" />
-      <appender-ref ref="DebugFile" />
+      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="ErrorFile"/>
+      <appender-ref ref="DebugFile"/>
     </logger>
   </log4net>
   <appSettings>
     <!-- Настройки логирования -->
-    <add key="eventSourceName" value="RWTest" />
-    <add key="logName" value="RWTestLogFile" />
+    <add key="eventSourceName" value="RWTest"/>
+    <add key="logName" value="RWTestLogFile"/>
     <!-- В журнал Windows -->
-    <add key="ELog" value="False" />
-    <add key="ELogException" value="False" />
-    <add key="ELogEvent" value="False" />   
-    <add key="ELogServices" value="False" />      
+    <add key="ELog" value="False"/>
+    <add key="ELogException" value="False"/>
+    <add key="ELogEvent" value="False"/>   
+    <add key="ELogServices" value="False"/>      
     
     <!-- В базу данных -->
-    <add key="DBLog" value="False" />
-    <add key="DBLogException" value="False" />
-    <add key="DBLogEvent" value="False" />  
-    <add key="DBLogServices" value="False" />      
+    <add key="DBLog" value="False"/>
+    <add key="DBLogException" value="False"/>
+    <add key="DBLogEvent" value="False"/>  
+    <add key="DBLogServices" value="True"/>      
     
     <!-- В файл на диске -->
-    <add key="FLog" value="True" />
-    <add key="FLogException" value="True" />
-    <add key="FLogEvent" value="True" />
-    <add key="FLogServices" value="True" />   
+    <add key="FLog" value="True"/>
+    <add key="FLogException" value="True"/>
+    <add key="FLogEvent" value="True"/>
+    <add key="FLogServices" value="True"/>   
 
   </appSettings>
   <connectionStrings>
-    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="log"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    <add name="UZ"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    <add name="metrans"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
 
 
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   
   </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
 </configuration>
