--- a/Test/App.config
+++ b/Test/App.config
@@ -10,6 +10,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
+    <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->  
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="Logs\Informations.log"/>
@@ -58,9 +59,11 @@
     </logger>
   </log4net>
   <appSettings>
+    <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
     <add key="eventSourceName" value="RWTest"/>
     <add key="logName" value="RWTestLogFile"/>
+    
     <!-- В журнал Windows -->
     <add key="ELog" value="False"/>
     <add key="ELogException" value="False"/>
@@ -77,7 +80,44 @@
     <add key="FLog" value="True"/>
     <add key="FLogException" value="True"/>
     <add key="FLogEvent" value="True"/>
-    <add key="FLogServices" value="True"/>   
+    <add key="FLogServices" value="True"/>
+    <!-- *********** СЕРВИСЫ ******************************************** -->
+    
+    <!-- **************************************************************** --> 
+    <!--              METRANS                                             -->
+    <!-- **************************************************************** -->     
+    <!-- Подключение к SFTP Метранс -->
+    <add key="Host" value="159.224.194.27" />
+    <add key="Port" value="222" />
+    <add key="User" value="arcelors" />
+    <add key="PSW" value="Fjt8Fyeq45" />
+
+    <!-- сервис перенос файлов на подходах -->
+    <add key="fromPathHostTransferApproaches" value="/inbox" />
+    <add key="FileFiltrHostTransferApproaches" value="*.txt" />
+    <add key="toDirPathTransferApproaches" value="C:\txt" />
+    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt" />
+    <add key="DeleteFileHostTransferApproaches" value="True" />
+    <add key="RewriteFileTransferApproaches" value="False" />
+    <!-- сервис перенос файлов на станции Кривой Рог -->
+    <add key="fromPathHostTransferArrival" value="/xmlin" />
+    <add key="FileFiltrHostTransferArrival" value="*.xml" />
+    <add key="toDirPathTransferArrival" value="C:\xml" />
+    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml" />
+    <add key="DeleteFileHostTransferArrival" value="True" />
+    <add key="RewriteFileTransferArrival" value="False" />
+
+    <!-- сервис TransferApproaches перенос из файлов txt в базу данных METRANS -->
+    <!--<add key="IntervalTransferApproaches" value="300" />
+    <add key="ActiveTransferApproaches" value="True" />-->
+    <add key="DeleteFileTransferApproaches" value="True" />
+
+    <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
+    <!--<add key="IntervalTransferArrival" value="300" />
+    <add key="ActiveTransferArrival" value="True" />-->
+    <add key="ArrivalToRailWay" value="True" />
+    <add key="DeleteFileTransferArrival" value="True" />
+    <add key="DayRangeArrivalCars" value="10" />
 
   </appSettings>
   <connectionStrings>
