--- a/MT/MT.csproj
+++ b/MT/MT.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers.cs" />
+    <Compile Include="MTThread.cs" />
     <Compile Include="MTTransfer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SFTPTransfer.cs" />
