--- a/MetransService/packages.config
+++ b/MetransService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DiffieHellman" version="1.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net45" />
   <package id="Tamir.SharpSsh.dll" version="1.1.1.14" targetFramework="net45" />
 </packages>
