--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -2,8 +2,9 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework"
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
@@ -63,63 +64,53 @@
     <!-- Настройки логирования -->
     <add key="eventSourceName" value="METRANS"/>
     <add key="logName" value="IDS_METRANS"/>
-
     <!-- В журнал Windows -->
     <add key="ELog" value="True"/>
     <add key="ELogException" value="True"/>
     <add key="ELogEvent" value="True"/>
     <add key="ELogServices" value="True"/>
-
     <!-- В базу данных -->
     <add key="DBLog" value="False"/>
     <add key="DBLogException" value="False"/>
     <add key="DBLogEvent" value="True"/>
     <add key="DBLogServices" value="True"/>
-
     <!-- В файл на диске -->
     <add key="FLog" value="True"/>
     <add key="FLogException" value="True"/>
     <add key="FLogEvent" value="True"/>
     <add key="FLogServices" value="True"/>
-
-
     <!-- сервис перенос файлов из SFTP Метранс на АМКР -->
-    <add key="ActiveTransferFile" value="True" />
-    <add key="IntervalTransferFile" value="300" />
-
+    <add key="ActiveTransferFile" value="True"/>
+    <add key="IntervalTransferFile" value="300"/>
     <!-- Подключение к SFTP Метранс -->
-    <add key="Host" value="159.224.194.27" />
-    <add key="Port" value="222" />
-    <add key="User" value="arcelors" />
-    <add key="PSW" value="$fh#ER2J63" />
-
+    <add key="Host" value="159.224.194.27"/>
+    <add key="Port" value="222"/>
+    <add key="User" value="arcelors"/>
+    <add key="PSW" value="$fh#ER2J63"/>
     <!-- сервис перенос файлов на подходах -->
-    <add key="fromPathHostTransferApproaches" value="/inbox" />
-    <add key="FileFiltrHostTransferApproaches" value="*.txt" />
-    <add key="toDirPathTransferApproaches" value="C:\txt" />
-    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt" />
-    <add key="DeleteFileHostTransferApproaches" value="True" />
-    <add key="RewriteFileTransferApproaches" value="False" />
+    <add key="fromPathHostTransferApproaches" value="/inbox"/>
+    <add key="FileFiltrHostTransferApproaches" value="*.txt"/>
+    <add key="toDirPathTransferApproaches" value="C:\txt"/>
+    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt"/>
+    <add key="DeleteFileHostTransferApproaches" value="True"/>
+    <add key="RewriteFileTransferApproaches" value="False"/>
     <!-- сервис перенос файлов на станции Кривой Рог -->
-    <add key="fromPathHostTransferArrival" value="/xmlin" />
-    <add key="FileFiltrHostTransferArrival" value="*.xml" />
-    <add key="toDirPathTransferArrival" value="C:\xml" />
-    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml" />
-    <add key="DeleteFileHostTransferArrival" value="True" />
-    <add key="RewriteFileTransferArrival" value="False" />
-
+    <add key="fromPathHostTransferArrival" value="/xmlin"/>
+    <add key="FileFiltrHostTransferArrival" value="*.xml"/>
+    <add key="toDirPathTransferArrival" value="C:\xml"/>
+    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml"/>
+    <add key="DeleteFileHostTransferArrival" value="True"/>
+    <add key="RewriteFileTransferArrival" value="False"/>
     <!-- сервис TransferApproaches перенос из файлов txt в базу данных METRANS -->
-    <add key="ActiveTransferApproaches" value="True" />
-    <add key="IntervalTransferApproaches" value="300" />
-    <add key="DeleteFileTransferApproaches" value="True" />
-
+    <add key="ActiveTransferApproaches" value="True"/>
+    <add key="IntervalTransferApproaches" value="300"/>
+    <add key="DeleteFileTransferApproaches" value="True"/>
     <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
-    <add key="ActiveTransferArrival" value="True" />
-    <add key="IntervalTransferArrival" value="300" />
-    <add key="ArrivalToRailWay" value="True" />
-    <add key="DeleteFileTransferArrival" value="True" />
-    <add key="DayRangeArrivalCars" value="10" />
-
+    <add key="ActiveTransferArrival" value="True"/>
+    <add key="IntervalTransferArrival" value="300"/>
+    <add key="ArrivalToRailWay" value="True"/>
+    <add key="DeleteFileTransferArrival" value="True"/>
+    <add key="DayRangeArrivalCars" value="10"/>
   </appSettings>
   <connectionStrings>
     <add name="log"
@@ -131,14 +122,16 @@
     <add name="metrans"
       connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient"/>
-
-
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-
   </connectionStrings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb"/>
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
 </configuration>
