--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -62,8 +62,8 @@
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="eventSourceName" value="METRANS"/>
-    <add key="logName" value="IDS_METRANS"/>
+    <add key="ESourceName" value="METRANS"/>
+    <add key="ELogName" value="IDS_METRANS"/>
     <!-- В журнал Windows -->
     <add key="ELog" value="True"/>
     <add key="ELogException" value="True"/>
