--- a/Test/App.config
+++ b/Test/App.config
@@ -62,8 +62,8 @@
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="eventSourceName" value="RWTest"/>
-    <add key="logName" value="RWTestLogFile"/>
+    <add key="ESourceName" value="METRANS"/>
+    <add key="ELogName" value="IDS_METRANS"/>
     <!-- В журнал Windows -->
     <add key="ELog" value="False"/>
     <add key="ELogException" value="False"/>
