--- a/MT/packages.config
+++ b/MT/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DiffieHellman" version="1.0.0" targetFramework="net45" />
+  <package id="DiffieHellman.local" version="1.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net45" />
   <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net45" />
   <package id="Tamir.SharpSsh.dll" version="1.1.1.14" targetFramework="net45" />
