testing WT metrans

--- a/Test/App.config
+++ b/Test/App.config
@@ -77,6 +77,13 @@
     <add key="FLogException" value="True" />
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
+  <!-- *********** WEB API    ******************************************** -->
+    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" />
+    <!--http://159.224.194.27:81-->
+    <!--portal.metrans.com.ua-->
+    <add key="WebApiMTUser" value="Arcelor1" />
+    <add key="WebApiMTPSW" value="12345678-" />
+    <add key="WebApiMTApi" value="/api/WagonsTracking" />
     <!-- *********** СЕРВИСЫ ******************************************** -->
     <!-- **************************************************************** -->
     <!--              METRANS                                             -->
@@ -110,6 +117,12 @@
     <add key="ArrivalToRailWay" value="True" />
     <add key="DeleteFileTransferArrival" value="True" />
     <add key="DayRangeArrivalCars" value="10" />
+
+    <!-- сервис переноса положения вагонов TransferWT -->
+    <add key="IntervalTransferWT" value="600" />
+    <add key="ActiveTransferWT" value="True" />
+    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
+    
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
