--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -69,7 +69,7 @@
     <add key="ELogServices" value="True" />
     <!-- В базу данных -->
     <add key="DBLog" value="False" />
-    <add key="DBLogException" value="False" />
+    <add key="DBLogException" value="True" />
     <add key="DBLogEvent" value="True" />
     <add key="DBLogServices" value="True" />
     <!-- В файл на диске -->
@@ -77,6 +77,7 @@
     <add key="FLogException" value="True" />
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
+    <!-- *********** СЕРВИСЫ  ***************************************** -->
     <!-- сервис перенос файлов из SFTP Метранс на АМКР -->
     <add key="ActiveTransferFile" value="True" />
     <add key="IntervalTransferFile" value="300" />
@@ -109,6 +110,16 @@
     <add key="ArrivalToRailWay" value="True" />
     <add key="DeleteFileTransferArrival" value="True" />
     <add key="DayRangeArrivalCars" value="10" />
+    <!-- сервис переноса положения вагонов TransferWT из WEB API -->
+    <add key="IntervalTransferWT" value="600" />
+    <add key="ActiveTransferWT" value="True" />
+    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
+    <!--Подключение к WebAPI METRANS-->
+    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" /><!--http://159.224.194.27:81--><!--portal.metrans.com.ua-->
+    <add key="WebApiMTUser" value="Arcelor1" />
+    <add key="WebApiMTPSW" value="12345678-" />
+    <add key="WebApiMTApi" value="/api/WagonsTracking" />    
+
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
